--- a/src/index.scss
+++ b/src/index.scss
@@ -16,17 +16,17 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #eee;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #ddd;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  /* display: flex; */
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
